--- a/package.json
+++ b/package.json
@@ -9,32 +9,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "cesium": "^1.112.0",
-    "echarts": "^5.4.3",
+    "cesium": "^1.115.0",
+    "echarts": "^5.5.0",
     "pinia": "^2.1.7",
-    "three": "^0.159.0",
-    "vue": "^3.3.13",
-    "vue-router": "^4.2.5"
+    "three": "^0.162.0",
+    "vue": "^3.4.21",
+    "vue-demi": "^0.14.7",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.1",
     "@types/cesium": "^1.70.0",
     "@types/echarts": "^4.9.22",
-    "@types/node": "^20.10.5",
-    "@types/three": "^0.159.0",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "ant-design-vue": "^4.0.8",
-    "axios": "^1.6.5",
+    "@types/node": "^20.11.24",
+    "@types/three": "^0.162.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue-office/pdf": "^1.6.5",
+    "ant-design-vue": "^4.1.2",
+    "axios": "^1.6.7",
     "mockjs": "^1.1.0",
-    "sass": "^1.69.5",
+    "sass": "^1.71.1",
     "typescript": "^5.3.3",
-    "unocss": "^0.58.0",
+    "unocss": "^0.58.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.0.10",
+    "vite": "^5.1.4",
     "vite-plugin-externals": "^0.6.2",
-    "vite-plugin-insert-html": "^1.0.1",
+    "vite-plugin-insert-html": "^1.0.2",
     "vite-plugin-mock": "2.9.6",
-    "vite-plugin-static-copy": "^1.0.0",
-    "vue-tsc": "^1.8.26"
+    "vite-plugin-static-copy": "^1.0.1",
+    "vue-tsc": "^2.0.2"
   }
 }
