--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "pinia": "^2.1.7",
     "vue": "^3.4.23",
+    "vue-demi": "^0.14.7",
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@types/gsap": "^3.0.0",
     "@types/node": "^20.12.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "axios": "^1.6.8",
+    "gsap": "^3.12.5",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.75.0",
     "typescript": "^5.4.5",
     "unocss": "^0.58.9",
     "vite": "^5.2.10",
+    "vite-plugin-cdn-import": "^1.0.1",
     "vue-tsc": "^2.0.14"
   }
 }
